# mycli

./: README.md  pyproject.toml  test.py
src/mycli/: __init__.py  cli.py
