[project]
name = "mycli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vinod", email = "vinod236@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mycli = "mycli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
